INTRODUCTORY FILE.HTML

--- a/INTRODUCTORY FILE.HTML
+++ b/INTRODUCTORY FILE.HTML
@@ -25,7 +25,7 @@
         <h3>SCHOOLING STATUS</h3>
     </SECTION>
     <ARTICLE>
-        <a href="https://dspublicschool.in/" target="_main"><img src="/.dist/ds1.jpg " height ="200"> 
+        <a href="https://dspublicschool.in/" target="_main"><img src="https://github.com/RAVINAMITTAL/PORTFOLIO-USING-HTML/blob/main/ds1.jpg" height ="200"> 
         </a>
         <pre> <I>
         I have done my  secondary schooling from<U>D.S PUBLIC SCHOOL</U> 
