INTRODUCTORY FILE.HTML

--- a/INTRODUCTORY FILE.HTML
+++ b/INTRODUCTORY FILE.HTML
@@ -39,7 +39,7 @@
                 <h3>COLLEGE STATUS </h3>
             </SECTION>
             <ARTICLE>
-                <a href="https://www.ccet.ac.in/" target="_main"><img src="/.dist/carousel_updated_img.jpeg " height ="200">    
+                <a href="https://www.ccet.ac.in/" target="_main"><img src="https://github.com/RAVINAMITTAL/PORTFOLIO-USING-HTML/blob/main/carousel_updated_img.jpeg " height ="200">    
                 <I> <pre>
             I am currently pursuing my degree in <b> B.TECH  CSE </b>Branch.
             I have completed my first year with a <B> CGPA 9.77</B>.</PRE>
