--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -20,7 +20,7 @@
 </pre>
     </DIV>
     <div>
-        <a href="/.dist/INTRODUCTORY FILE.HTML" target="_main"><img src="https://github.com/RAVINAMITTAL/PORTFOLIO-USING-HTML/blob/main/image.png"  height="200" alt="My image"></a>
+        <a href="https://github.com/RAVINAMITTAL/PORTFOLIO-USING-HTML/blob/main/INTRODUCTORY%20FILE.HTML" target="_main"><img src="https://github.com/RAVINAMITTAL/PORTFOLIO-USING-HTML/blob/main/image.png"  height="200" alt="My image"></a>
     </div>
     
 </MAIN>
